--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.dellc.mynews"
         minSdkVersion 15
         targetSdkVersion 25
@@ -17,19 +17,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile 'com.google.code.gson:gson:2.8.0'
+
+    dependencies {
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+        compile 'com.android.support:appcompat-v7:25.0.1'
+        compile 'com.android.support:support-v4:25.0.1'
+        testCompile 'junit:junit:4.12'
+
+        compile 'com.android.support:design:25.0.1'
+        compile 'com.github.bumptech.glide:glide:3.7.0'
+        // compile 'com.squareup.okhttp3:okhttp:3.8.0'
+        //compile 'com.google.code.gson:gson:2.8.0'
+        compile 'cn.bmob.android:bmob-sdk:3.5.5'
+    }
 }
