--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dellc.mynews">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--允许联网 -->
+        <uses-permission android:name="android.permission.INTERNET" />
+       <!--获取GSM（2g）、WCDMA（联通3g）等网络状态的信息  -->
+       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <!--获取wifi网络状态的信息 -->
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+        <!--保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
+       <uses-permission android:name="android.permission.WAKE_LOCK" />
+        <!--获取sd卡写的权限，用于文件上传和下载-->
+       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+       <!--允许读取手机状态 用于创建BmobInstallation-->
+       <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".NewsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +24,7 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,20 +32,20 @@
         </activity>
 
         <activity
-            android:name=".GuideActivity"
+            android:name=".activity.GuideActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_guide"
             android:theme="@style/FullscreenTheme"></activity>
 
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".activity.WelcomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_welcome"
             android:theme="@style/FullscreenTheme">
-
-
         </activity>
 
+        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.ReadActivity"></activity>
 
     </application>
 
